Implemented do turn functionality only misses 5 turns check
